# timda_dual_arm

./: .gitignore  LICENSE  README.md
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_base_module/: CMakeLists.txt  package.xml
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_base_module/config/: ini_pose.yaml
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_base_module/include/manipulator_h_base_module/: base_module.h  robotis_state.h  slide_control.h
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_base_module/src/: base_module.cpp  robotis_state.cpp  slide_control.cpp
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_base_module_msgs/: CMakeLists.txt
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_base_module_msgs/msg/: VectorMove.msg
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_gui/: CMakeLists.txt  package.xml
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_gui/include/manipulator_h_gui/: main_window.hpp  qnode.hpp
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_gui/log/: left_arm_pose_log.yaml  right_arm_pose_log.yaml
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_gui/src/: main_window.cpp  qnode.cpp
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_gui/ui/: main_window.ui
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_joystick/: CMakeLists.txt  package.xml
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_joystick/src/: joystick.cpp
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_joystick/srv/: JoyCalibration.srv
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_kinematics_dynamics/src/: link_data.cpp  manipulator_h_kinematics_dynamics.cpp
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_manager/: CMakeLists.txt  package.xml
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_h_manager/launch/: dual_arm.launch  dual_arm_with_robotiq_gripper.launch  single_arm.launch
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_joystick/: CMakeLists.txt  package.xml
ROBOTIS/ROBOTIS-MANIPULATOR-H/manipulator_joystick/src/: joystick.cpp
arm_control/src/arm_control/: __init__.py  arm_task.py  dual_arm_task.py  robotiq_2f_gripper.py  suction.py
darknet_ros_msgs/: CMakeLists.txt  package.xml
darknet_ros_msgs/msg/: QueSignal.msg
darknet_ros_msgs/scripts/: expired_task.py  grap_bottle.py  pose_strategy.py  suck_sand.py  wipe_strategy (copy).py  wipe_strategy.py
darknet_ros_msgs/src/: object_pos.py
dual_arm_behaviors/: README.md
dual_arm_behaviors/dual_arm_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
dual_arm_behaviors/dual_arm_flexbe_behaviors/manifest/: customer_service.xml  dual_arm_sample.xml  example_behavior.xml  gripper_test.xml  hand_eye_calib.xml  scratch_desk.xml  single_arm_sample.xml  test.xml  wipe_desk.xml  wipe_task_left.xml  wipe_task_right.xml
dual_arm_behaviors/dual_arm_flexbe_behaviors/src/dual_arm_flexbe_behaviors/: customer_service_sm.py  dual_arm_sample_sm.py  gripper_test_sm.py  hand_eye_calib_sm.py  scratch_desk_sm.py  single_arm_sample_sm.py  test_sm.py  wipe_desk_sm.py  wipe_task_left_sm.py  wipe_task_right_sm.py
dual_arm_behaviors/dual_arm_flexbe_states/: CMakeLists.txt  package.xml  setup.py
dual_arm_behaviors/dual_arm_flexbe_states/src/dual_arm_flexbe_states/: IK_move.py  apporach_scratcher.py  calibration_state.py  capture_charuco.py  fixed_joint_move.py  fixed_pose_move.py  get_pose.py  get_scratch_pose.py  get_spray_alcohol_II.py  get_spray_alcohol_pose.py  get_wipe_pose.py  init_robot.py  pix_to_robot.py  pos_to_robot.py  robot_move.py  robotiq_2f_gripper_control.py  robotiq_2f_gripper_state.py  trans_to_robot.py  wait_arm_ready.py  wait_timda_mobile.py
gazebo/mobile_dual_arm/worlds/: mobile_dual_arm.world
hand_eye/: CMakeLists.txt  package.xml  setup.py
hand_eye/config/: camera_3_internal.ini  camera_8_internal.ini  left_arm_img_trans.ini  left_img_trans.ini  right_arm_img_trans.ini  right_img_trans.ini
hand_eye/launch/: aruco_hand_eye.launch  charuco_hand_eye.launch  dual_hand_eye_trans.launch  eye-in-hand.launch  eye_in_hand_flexbe.launch  hand_eye_calibration_pic.launch  hand_eye_trans.launch
hand_eye/script/: hand_eye_calibration.py
hand_eye/src/hand_eye/: CharucoPosture.py  MarkerPosture.py  __init__.py  calibrate.py  hand_eye_connector.py  hand_eye_trans.py
hand_eye/srv/: aruco_info.srv  eye2base.srv  hand_eye_calibration.srv
lib/rosserial-0.7.7/rosserial_python/nodes/: serial_node.py
linear_motion/include/linear_motion/: slide.h
linear_motion/src/: linear_z.cpp
robotiq_2finger_grippers/robotiq_2f_gripper_control/: CMakeLists.txt  package.xml  setup.py
robotiq_2finger_grippers/robotiq_2f_gripper_control/include/robotiq_2f_gripper_control/: gripper_control.h
robotiq_2finger_grippers/robotiq_2f_gripper_control/launch/: robotiq_action_server.launch
robotiq_2finger_grippers/robotiq_2f_gripper_control/scripts/: robotiq_2f_action_client_example.py  robotiq_2f_action_server.py
robotiq_2finger_grippers/robotiq_2f_gripper_control/src/: gripper_control.cpp  gripper_main.cpp
robotiq_2finger_grippers/robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: gripper_control.cpp  robotiq_2f_gripper_driver.py
robotiq_2finger_grippers/robotiq_modbus_rtu/src/robotiq_modbus_rtu/: comModbusRtu.py
robotiq_gripper/robotiq_2f_gripper_control/nodes/: Robotiq2FGripperRtuNode.py
strategy/: CMakeLists.txt  package.xml  setup.py
strategy/msg/: ArmStatus.msg  TargetValue.msg
strategy/scripts/: core.py  my_state_machine.py  obj_info.py  pose_strategy.py  product_strategy.py  release_bottle.py  scratch_strategy.py  wipe_strategy (copy).py  wipe_strategy.py
strategy/src/: example.py  test.py
strategy/srv/: aruco_info.srv  plot_position.srv  timda_mobile_state.srv
strategy_dual_arm/: CMakeLists.txt  package.xml
strategy_dual_arm/include/strategy_dual_arm/: strategy_msg.h  wipe_strategy.h
strategy_dual_arm/launch/: wipe.launch
strategy_dual_arm/src/: main_strategy.cpp  strategy_msg.cpp  wipe_strategy.cpp
vacuum/arduino_ros_vacuumServiceServer/: arduino_ros_vacuumServiceServer.ino
(+3 files in other folders)
